code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/TimelineDisplay/TimelineDisplay.module.css
.timeline {
  display: flex;
  flex-direction: column;
  gap: var(--spacer-16);
  position: relative;
}

.timelineLineBackground {
  position: absolute;
  margin: 9.5px;
  border-left: 1px solid var(--border-gray-secondary);
  z-index: -1;
  top: 0;
  height: 100%;
  width: 100%;
}

.eventSmall {
  display: flex;
  gap: var(--spacer-24);
  color: var(--text-secondary);
}

.userLink {
  color: var(--text-primary);
  text-decoration: none;
  font-weight: 500;
}

.userLink:hover {
  text-decoration: underline;
}

.timelineIcon {
  padding: var(--spacer-4) 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--background-light);
}

.committedLine {
  display: flex;
  gap: var(--spacer-12);
}

.commitLineText {
  color: var(--text-tertiary);
}

.commitSha {
  color: var(--text-accent);
  font-weight: 700;
}

.tempUserIcon {
  height: 18px;
  width: 18px;
  background-color: var(--state-draft);
  border-radius: 32px;
  position: relative;
}

